--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,31 @@
-== README
+listor-rails
+====
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+> ROR app to manage your recruiting pipeline.
 
-Things you may want to cover:
+### Getting started
 
-* Ruby version
+```
+$ clone repo && cd listor-rails
+$ bundle install
+```
 
-* System dependencies
+Create a **config/secrets.yml**
 
-* Configuration
+```
+development:
+  secret_token: 8ff532f2a7cd70372d910d4222aa57c7959faf683420aae287e1b364fceb829d827253e90af602316032368affa85d1310e081abe23abca0cb6852ed0357bdb1
+  secret_key_base: SOMEKEY
+```
 
-* Database creation
+```
+$ rake db:migrate
+$ rails s
+```
 
-* Database initialization
+### Technologies used
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+- Ruby On Rails
+- Devise for authentication
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
